update links to go to new window

--- a/apply.html
+++ b/apply.html
@@ -83,7 +83,8 @@
 			</ul>
 			<hr />
 			<p style="text-align: center;"><span style="font-size: 13pt;"><em>Example:&nbsp;<strong><span style="font-weight: 400;">Banning a player for advertising or investigating a hacker claim</span></strong></em></span></p>
-			<div class="centered"><button type="button" onclick="window.location.href='https://www.advancius.net/modapp'" class="btn success">Apply</button></div>
+			<div class="centered"><button type="button" onclick="window.open(
+			'https://www.advancius.net/modapp','_blank');" class="btn success">Apply</button></div>
 		</div>
 
 		<div style="background-color: white; margin: 10px; padding: 10px; border: solid #55ff55;">
@@ -97,7 +98,8 @@
 			</ul>
 			<hr />
 			<p style="text-align: center;"><span style="font-size: 13pt;"><em>Example:&nbsp;Building a new spleef map or updating a lobby to fit a holiday theme</em></span></p>
-			<div class="centered"><button type="button" onclick="window.location.href='https://www.advancius.net/builderapp'" class="btn success">Apply</button></div>
+			<div class="centered"><button type="button" onclick="window.open(
+			'https://www.advancius.net/builderapp','_blank');" class="btn success">Apply</button></div>
 		</div>
 
 		<div style="background-color: white; margin: 10px; padding: 10px; border: solid #b81cb8;">
@@ -117,7 +119,8 @@
 			</ul>
 			<hr />
 			<p style="text-align: center;"></p>
-			<div class="centered"><button type="button" onclick="window.location.href='https://www.advancius.net/socialmediaapplication'" class="btn success">Apply</button></div>
+			<div class="centered"><button type="button" onclick="window.open(
+			'https://www.advancius.net/socialmediaapplication','_blank');" class="btn success">Apply</button></div>
 		</div>
 
 
@@ -162,7 +165,8 @@
 			</ul>
 			<hr />
 			<p style="text-align: center;"><span style="font-size: 13pt;"><em>Examples: Implementing a new&nbsp;minigame<strong><span style="font-weight: 400;">,&nbsp;setting up the world/regions/holograms for a new minigame, configuring a plugin from online, bug fixing, or coding a new plugin</span></strong></em></span></p>
-			<div class="centered"><button type="button" onclick="window.location.href='https://www.advancius.net/devapp'" class="btn success">Apply</button></div>
+			<div class="centered"><button type="button" onclick="window.open(
+			'https://www.advancius.net/devapp','_blank');" class="btn success">Apply</button></div>
 		</div>
 
 
@@ -185,7 +189,8 @@
 			</ul>
 			<hr />
 			<p style="text-align: center;"><span style="font-size: 13pt;"><em>Example:&nbsp;<strong><span style="font-weight: 400;">Hosting a social media giveaway or relaying to the rest of the staff that a lot of the community wants to add a specific new minigame </span></strong></em></span></p>
-			<div class="centered"><button type="button" onclick="window.location.href='https://www.advancius.net/communitymanagerapp'" class="btn success">Apply</button></div>
+			<div class="centered"><button type="button" onclick="window.open(
+			'https://www.advancius.net/communitymanagerapp','_blank');" class="btn success">Apply</button></div>
 		</div>
 
 		<div style="background-color: white; margin: 10px; padding: 10px; border: solid #ffaa00;">
@@ -201,7 +206,8 @@
 			</ul>
 			<hr />
 			<p style="text-align: center;"><span style="font-size: 13pt;"><em>Example:&nbsp;<strong><span style="font-weight: 400;">Conducting an interview with a promising Mod candidate or talking to senior staff members about promoting a Jr team member</span></strong></em></span></p>
-			<div class="centered"><button type="button" onclick="window.location.href='https://www.advancius.net/staffmanagerapp'" class="btn success">Apply</button></div>
+			<div class="centered"><button type="button" onclick="window.open(
+			'https://www.advancius.net/staffmanagerapp','_blank');" class="btn success">Apply</button></div>
 		</div>
 
 	</div>
