updated guide link

--- a/apply.html
+++ b/apply.html
@@ -133,7 +133,7 @@
 		<div style="background-color: white; margin: 10px; margin-bottom: 30px; padding: 10px; border: solid black;">
 			<p style="text-align: center;"><span style="text-decoration: underline;"><em><span style="font-size: 16pt;"><strong>Players can apply and be a part of more than one team.</strong></span></em></span></p>
 			<p style="text-align: center;"><strong><span style="font-size: 14pt;">Guide to writing applications:</span></strong></p>
-			<p style="text-align: center;"><strong><span style="font-size: 14pt;"><a href="https://bit.ly/2wnaYpK">https://bit.ly/2wnaYpK</a>&nbsp;</span></strong></p>
+			<p style="text-align: center;"><strong><span style="font-size: 14pt;"><a href="https://bit.ly/2Vi7i6K">https://bit.ly/2wnaYpK</a>&nbsp;</span></strong></p>
 			<p style="text-align: center;"><strong><span style="font-size: 14pt;">View your application(s) here:</span></strong></p>
 			<p style="text-align: center;"><strong><span style="font-size: 14pt;"><a href="https://tinyurl.com/myenjinapps">https://tinyurl.com/myenjinapps</a>&nbsp;</span></strong></p>
 		</div>
